[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NARMAX"
version = "0.14"
description = "Machine learning library for NARMAX symbolic fitting"
authors = [{name = "Stéphane Thunus", email = "144615547+Stee-T@users.noreply.github.com"}]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "dill",
    "tqdm",
    "torch"
]
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "."}
packages = ["NARMAX"]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = ["ignore:No operations and AllowNegation = False:UserWarning"]